--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,39 @@
+@font-face {
+    font-family: montserrat;
+    src: url(./assets/Montserrat-VariableFont_wght.ttf);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: montserrat, sans-serif;
+    height: 100vh;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content 5fr min-content;
+    justify-items: center;
+
+}
+
+
+
 .icon {
     display: inline-block;
 }
 
 input[type="radio"] {
     display: none;
+}
+
+.selected {
+    border: 1px solid black;
+}
+
+footer img {
+    height: 20px;
 }
