--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     grid-template-rows: min-content 5fr min-content;
     justify-items: center;
     background-image: url(./assets/bjark-DZ975EkUJH0-unsplash.jpg);
-    background-position: top center;
+    background-position: top left;
     background-size: cover;
 }
 
@@ -76,6 +76,7 @@ button#submit:active {
 
 /* CONTAINER */
 
+
 .container {
     width: 80%;
     background-color: rgba(255, 255, 255, 0.3);
@@ -84,42 +85,52 @@ button#submit:active {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     font-size: 20px;
     padding: 1rem;
+    margin-bottom: 2rem;
 }
 
 .city {
     text-transform: uppercase;
     font-weight: 500;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .country,
 .localtime {
+    font-size: 1rem;
     font-weight: 300;
     text-transform: uppercase;
+}
+
+.localtime {
+    margin-bottom: 1rem;
 }
 
 .condition-text {
     margin: 0.5rem 0px;
     font-weight: 500;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .condition {
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid black;
     padding: 1rem;
     border-radius: 50%;
+
 }
+
 
 .temp {
     padding: 1rem;
     font-size: 5rem;
-    margin-bottom: 1rem;
 }
 
 .feels-like {
@@ -129,21 +140,49 @@ button#submit:active {
 
 .temp-switch {
     display: flex;
-    gap: 1rem;
+    justify-content: center;
+    padding: 0.5rem;
+
 }
 
 input[type="radio"] {
     display: none;
 }
 
+.temp-switch label {
+    padding: 4px 10px;
+    border-radius: 50%;
+
+    cursor: pointer;
+}
+
 .selected {
-    border: 1px solid black;
+    color: #fdb44b;
+    text-shadow: 2px 2px 2px rgb(67, 67, 67);
 }
 
 footer {
-    margin: 1rem 0px;
+    width: 100%;
+    background-color: #005792;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer a {
+    text-decoration: none;
 }
 
 footer img {
     height: 20px;
+}
+
+.footer {
+    display: flex;
+    gap: 4px;
+}
+
+.footer a {
+    color: lightgrey
 }
